# LlvmToFirm

./: Architecture.txt  CMakeLists.txt  Guidelines.txt  LICENSE.txt  README.md  constructors.patch
Bugs/: invalid_div_1.bc  invalid_div_1.s  invalid_div_2.bc  invalid_div_2.s  test.s
FirmLlvmCompiler/: CMakeLists.txt  Compiler.cpp  FileHandle.cpp  FileHandle.hpp
libltf/: CMakeLists.txt  Config.hpp  Context.cpp  Context.hpp  Library.hpp
libltf/Builders/: BlockBuilder.cpp  BlockBuilder.hpp  Builder.hpp  EntityBuilder.cpp  EntityBuilder.hpp  FrameBuilder.cpp  FrameBuilder.hpp  GraphBuilder.cpp  GraphBuilder.hpp  NodeBuilder.cpp  NodeBuilder.hpp  TypeBuilder.cpp  TypeBuilder.hpp  TypeMetakey.cpp  TypeMetakey.hpp
libltf/Components/: CParserOptimizer.cpp  CParserOptimizer.hpp  DefaultBackend.cpp  DefaultBackend.hpp  LlvmAssemblerParser.cpp  LlvmAssemblerParser.hpp  LlvmBitcodeParser.cpp  LlvmBitcodeParser.hpp
libltf/Exceptions/: LlvmException.hpp  NotImplementedException.cpp  NotImplementedException.hpp  NotSupportedException.cpp  NotSupportedException.hpp  ParseException.cpp  ParseException.hpp  VerifyException.cpp  VerifyException.hpp
libltf/Facade/: Backend.hpp  Converter.cpp  Converter.hpp  Optimizer.cpp  Optimizer.hpp  Parser.hpp
libltf/Instructions/: Arithmetic.cpp  Bitwise.cpp  Constants.cpp  ControlFlow.cpp  Conversions.cpp  IfCascade.cpp  Memory.cpp  Miscellaneous.cpp  Tuples.cpp  VarArg.cpp
libltf/Lowering/: LowerInstructionsPass.cpp  LowerInstructionsPass.hpp  LowerIntrinsicsPass.cpp  LowerIntrinsicsPass.hpp
libltf/Optimizations/: BasePasses.cpp  BasePasses.hpp  OptimizationPasses.hpp
libltf/RAII/: AllocaScope.cpp  AllocaScope.hpp  BlockScope.cpp  BlockScope.hpp  FileHandle.cpp  FileHandle.hpp  FirmHandle.cpp  FirmHandle.hpp  GraphScope.cpp  GraphScope.hpp  TimedScope.hpp  UnoptimizedScope.cpp  UnoptimizedScope.hpp
libltf/Typedef/: List.hpp  Map.hpp  Pointer.hpp  Set.hpp  Vector.hpp
libltf/Util/: Casting.cpp  Casting.hpp  FirmTools.cpp  FirmTools.hpp  LlvmTools.cpp  LlvmTools.hpp  Logging.cpp  Logging.hpp  MapTools.hpp  StringTools.hpp  TypeInfo.cpp  TypeInfo.hpp
ltf-gcc/: ltf-gcc
ltf-llc/: CMakeLists.txt  Main.cpp
tests/: aggregates.ll  aggregates.out  arithmetic_char_0.in  arithmetic_char_0.ll  arithmetic_char_0.out  arithmetic_char_1.ll  arithmetic_double_0.in  arithmetic_double_0.ll  arithmetic_double_0.out  arithmetic_double_1.ll  arithmetic_float_0.in  arithmetic_float_0.ll  arithmetic_float_0.out  arithmetic_float_1.ll  arithmetic_int_0.ll  arithmetic_int_1.in  arithmetic_int_1.ll  arithmetic_int_1.out  arithmetic_long_long_0.ll  arithmetic_long_long_1.in  arithmetic_long_long_1.ll  arithmetic_long_long_1.out  arithmetic_short_0.in  arithmetic_short_0.ll  arithmetic_short_0.out  arithmetic_short_1.ll  bigint_stld.ll  bigint_stld.out  bitfields_0.ll  bitfields_0.out  bitwise_char_0.ll  bitwise_char_1.in  bitwise_char_1.ll  bitwise_char_1.out  bitwise_int_0.in  bitwise_int_0.ll  bitwise_int_0.out  bitwise_int_1.ll  bitwise_long_long_0.in  bitwise_long_long_0.ll  (+93 more)
tests/source/: arithmetic_char.c  arithmetic_double.c  arithmetic_float.c  arithmetic_int.c  arithmetic_long_long.c  arithmetic_short.c  bitfields.c  bitwise_char.c  bitwise_int.c  bitwise_long_long.c  bitwise_short.c  buildtest.sh  cast.c  copy_param.c  cpp_hello.cpp  extended_euclidean.c  fibonacci.c  for_loop.c  fpselect.c  function.c  function_return.c  infinite_loop.c  local_array.c  loop.c  packed_struct.c  return_by_pointer.c  simple_long_long.c  struct.c  switch.c  union.c  unreachable.c  unreachable_if.c  var_func.c
